@@ -1,3 +1,9 @@
+2002-11-07  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-customization-data.c:
+	* icons/chit_frame.png:
+	Make chit alpha blended. New image from Jens Lautenbacher <jtl@schlund.de>.
+
 2002-11-06  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/nautilus-file-management-properties.glade: Fix some bad
